Fix Make dependency for Conway polynomials
Problem: Conway polynomials had to be recompiled every time anything
changed within the build directory.
Solution: Add a pipe-symbol before the build directory in the Makefile.

--- a/Makefile.in
+++ b/Makefile.in
@@ -230,7 +230,7 @@ uninstall:
 build:
 	mkdir -p build
 
-build/CPimport.h: qadic/CPimport.txt build
+build/CPimport.h: qadic/CPimport.txt | build
 	$(AT)sed "s/ /,/g;s/.*/&,/g" $< > $@
 
 build/%.lo: %.c $(HEADERS) | build
