--- a/fmpz-conversions-gc.in
+++ b/fmpz-conversions-gc.in
@@ -7,4 +7,7 @@
 /* turns an fmpz into a pointer to an mpz */
 #define COEFF_TO_PTR(x) ((__mpz_struct *) (((ulong)x) << 2))
 
+/* is x a pointer not an integer */
+#define COEFF_IS_MPZ(x) (((x) >> SMALL_FMPZ_BITCOUNT_MAX) == WORD(1))
+
 #endif /* FMPZ_CONVERSIONS_H */
