--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -264,8 +264,8 @@ jobs:
           mkdir -p build
           echo "int flint_test_multiplier(){return 1;}" > test_helpers.c
           cd build
-          cmake -G "MinGW Makefiles" -DBUILD_TESTING=ON \
-                                    -DCMAKE_BUILD_TYPE=Release ..
+          cmake -G "MinGW Makefiles" \
+            -DBUILD_SHARED_LIBS=ON -DBUILD_TESTING=ON -DCMAKE_BUILD_TYPE=Release ..
         shell: bash
 
       - name: "Compile"
