--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -94,64 +94,53 @@ jobs:
 
 
 
-  # NOTE: Cygwin is paaaaiinfully slow. Let's not this as it is not advised to
-  # be used by MPFR.
-
   ##############################################################################
-  ## cygwin with gcc
+  # cygwin with gcc
   ##############################################################################
-  #cygwin-gcc:
-  #  name: Cygwin GCC
+  cygwin-gcc:
+    name: Cygwin GCC
 
-  #  runs-on: windows-2019
+    runs-on: windows-latest
 
-  #  defaults:
-  #    run:
-  #      shell: C:\cygwin64\bin\bash.exe --login -o igncr '{0}'
+    defaults:
+      run:
+        shell: C:\cygwin64\bin\bash.exe --login -o igncr '{0}'
 
-  #  env:
-  #    MAKE: "make -j"
-  #    REPO: /cygdrive/d/a/flint2/flint2 # FIXME: De-hardcode this
-  #    LOCAL: /cygdrive/d/a/flint2/flint2/local
-  #    LDFLAGS: "-Wl,-rpath,$LOCAL/lib"
-  #    CFLAGS: "-Wall -D _WIN64"
-  #    EXTRA_OPTIONS: "--disable-static --enable-shared"
+    env:
+      MAKE: "make -j"
+      REPO: /cygdrive/d/a/flint2/flint2 # FIXME: De-hardcode this
+      CFLAGS: "-Wall -D _WIN64"
+      EXTRA_OPTIONS: "--enable-static --disable-shared"
 
-  #  steps:
-  #    - uses: actions/checkout@v2
+    steps:
+      - uses: actions/checkout@v2
 
-  #    - name: "Set up Cygwin"
-  #      uses: gap-actions/setup-cygwin@v1
-  #      with:
-  #        EXTRA_PKGS_TO_INSTALL: "ldd,dos2unix"
+      - name: "Set up Cygwin"
+        uses: gap-actions/setup-cygwin@v1
+        with:
+          PKGS_TO_INSTALL: "dos2unix,gcc-core,make,libgmp-devel,libmpfr-devel"
 
-  #    - name: "Setup"
-  #      run: |
-  #        gcc --version
-  #        make --version
+      - name: "Setup"
+        run: |
+          gcc --version
+          make --version
 
-  #    - name: "Build dependencies"
-  #      run: |
-  #        cd ${REPO}
-  #        dos2unix .build_dependencies
-  #        ./.build_dependencies
+      - name: "Configure"
+        run: |
+          cd ${REPO}
+          echo "int flint_test_multiplier(void) { return 1; }" > test_helpers.c
+          dos2unix configure
+          ./configure CFLAGS="${CFLAGS}" ${EXTRA_OPTIONS}
 
-  #    - name: "Configure"
-  #      run: |
-  #        cd ${REPO}
-  #        dos2unix configure
-  #        ./configure CFLAGS="${CFLAGS}" --with-gmp=${LOCAL} \
-  #            --with-mpfr=${LOCAL} ${EXTRA_OPTIONS}
+      - name: "Compile"
+        run: |
+          cd ${REPO}
+          ${MAKE}
 
-  #    - name: "Compile"
-  #      run: |
-  #        cd ${REPO}
-  #        $MAKE
-
-  #    - name: "Check"
-  #      run: |
-  #        cd ${REPO}
-  #        $MAKE check
+      - name: "Check"
+        run: |
+          cd ${REPO}
+          $MAKE check
 
 
 
